--- a/TrafficMonitorMobileService/TrafficMonitorMobileService.csproj
+++ b/TrafficMonitorMobileService/TrafficMonitorMobileService.csproj
@@ -38,6 +38,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\TrafficMonitorMobileService.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
@@ -215,7 +216,6 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Microsoft.ServiceBus.MessagingPerformanceCounters.man" />
     <None Include="Properties\PublishProfiles\mobile%24TrafficMonitorMobileService.pubxml" />
   </ItemGroup>
   <PropertyGroup>
