--- a/TrafficMonitorMobileService/TrafficMonitorMobileService.csproj
+++ b/TrafficMonitorMobileService/TrafficMonitorMobileService.csproj
@@ -190,13 +190,16 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StorageData.cs" />
-    <Compile Include="ManualRoutesController.cs" />
     <Compile Include="ManualRoute.cs" />
+    <Compile Include="MiscController.cs" />
+    <Compile Include="StorageData.cs" />
+    <Compile Include="ManualRouteController.cs" />
+    <Compile Include="ManualRouteEntity.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApiConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
